--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -132,3 +132,27 @@ what-I-do-description{
     font-size: 30px;
     font-weight: 700;
 }
+.resume-container{
+    display: flex;
+    gap: 70px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institution{
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+.resume-item-institution,.resume-item-description{
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px 0px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
