--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,3 +156,12 @@ what-I-do-description{
     text-align: center;
     margin-top: 50px;
 }
+/* footer styles */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 230px;
+}
+footer .section-title{
+    text-align: left;
+}
