--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -159,9 +159,25 @@ what-I-do-description{
 /* footer styles */
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 230px;
+    margin-top: 113px;
 }
-footer .section-title{
-    text-align: left;
+.footer-column{
+    width: 50%;
+}
+.social-links a{
+    margin-right: 20px;
+}
+.contact input[type="text"], .contact input[type="email"],textarea{
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 38px;
+    border-radius: 5px;
+    color: #757575;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+
 }
